Cloud Native/Kubernetes/open-webui/open-webui.yaml
#T* Service
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  labels:
    app: open-webui 

spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 3000 
      targetPort: 8080
---
#T* Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: open-webui-ingress

spec:
  rules:
  - host: reyes.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: open-webui-service
            port:
              number: 3000
        path: /
        pathType: Prefix
---
#T* StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui-sts
  labels:
    app: open-webui

spec:
  serviceName: open-webui-service
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  
  template:
    metadata:
      generateName: open-webui
      labels:
        app: open-webui
  
    spec:
      
      #! Container principal.
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          imagePullPolicy: IfNotPresent
          resources: {}
        
          ports:
            - containerPort: 3000
              name: open-webui
          
          volumeMounts:
            #! Volumen para datos persistentes
            - name: open-webui
              mountPath: /app/backend/data
  
  #! Volumenes de datos persistentes
  volumeClaimTemplates:
    - metadata:
        name: open-webui
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi

status: 
  replicas: 1
